validate news, store news in database